# TinaPushStream

./: build.gradle
app/: CMakeLists.txt  build.gradle
app/src/androidTest/java/com/tina/pushstream/: ExampleInstrumentedTest.java
app/src/main/: AndroidManifest.xml
app/src/main/cpp/: AudioChannel.cpp  AudioChannel.h  VideoChannel.cpp  VideoChannel.h  native-lib.cpp  safe_queue.h
app/src/main/cpp/include/: faac.h  faaccfg.h
app/src/main/cpp/librtmp/: CMakeLists.txt  rtmp.c
app/src/main/java/com/tina/pushstream/: MainActivity.java
app/src/main/java/com/tina/pushstream/live/: LivePusher.java
app/src/main/java/com/tina/pushstream/live/channel/: AudioChannel.java  CameraHelper.java  VideoChannel.java
app/src/main/res/values/: strings.xml
app/src/test/java/com/tina/pushstream/: ExampleUnitTest.java
gradle/wrapper/: gradle-wrapper.properties
